syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

import "gogoproto/gogo.proto";

message TickDataType {
  repeated string reserve0 = 1 [
      (gogoproto.moretags)   = "yaml:\"reserve0\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "reserve0"
  ]; 
  repeated string reserve1 = 2 [
      (gogoproto.moretags)   = "yaml:\"reserve1\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "reserve1"
  ]; 
}
